Fix Background position component alignment

--- a/src/components/background-position/editor.scss
+++ b/src/components/background-position/editor.scss
@@ -1,6 +1,7 @@
 .sgb-background-position-buttongroup {
+	display: block;
+	margin-top: 5px;
 	.components-button.is-button {
-		border-bottom: 0;
 		margin-top: -1px;
 		height: 40px;
 		display: inline-flex;
